data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4306.wast
;; 5. **Invalid Type Index**:    Use a `call_indirect` with an invalid `typeidx` that does not correspond to any function signature in the module. The test ensures that the context correctly identifies and traps due to the undefined type index.      **Constraint**: Validate the existence and correctness of the type index definition.

(assert_invalid
  (module
    (type $sig (func (param i32)))
    (table 1 funcref)
    (func $test
      (call_indirect (type 1) (i32.const 0))
    )
  )
  "invalid type index"
)